<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackColor"
    android:orientation="vertical"
    tools:context="com.huixiangshenghuo.app.ui.login.FindPasswordActivity">

    <include layout="@layout/title_bar_1"
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top_bottom_margin"
        android:paddingLeft="@dimen/left_right_margin"
        android:paddingRight="@dimen/left_right_margin"
        android:background="@drawable/public_bg">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar"
            android:background="@null"
            android:id="@+id/set_password"
            android:textColor="@color/grey"
            android:textSize="@dimen/content_text_size_16"
            android:inputType="textPassword"
            android:maxLength="15"
            android:hint="@string/set_password"/>

        <include layout="@layout/line_view"
            android:layout_width="match_parent"
            android:layout_height="1px"></include>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar"
            android:background="@null"
            android:id="@+id/set_password_two"
            android:textColor="@color/grey"
            android:textSize="@dimen/content_text_size_16"
            android:inputType="textPassword"
            android:maxLength="15"
            android:hint="@string/set_password_two"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_button_height"
        android:background="@drawable/button_red_bg"
        android:textColor="@color/white"
        android:textSize="@dimen/bottom_button_text_size_18"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_margin="@dimen/left_right_margin"/>


</LinearLayout>
