<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

              tools:context="com.huixiangshenghuo.app.ui.home.PayMoneyActivity">
    <include layout="@layout/title_bar_1"
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        ></include>

    <!--    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/top_bottom_margin"
            android:paddingBottom="@dimen/top_bottom_margin"
            android:layout_marginTop="@dimen/top_bottom_margin"
            android:drawableLeft="@mipmap/zfb_icon"
            android:paddingLeft="@dimen/left_right_margin"
            android:textSize="@dimen/content_text_size_16"
            android:text="@string/ali_pay"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/left_right_margin"
            android:textColor="@color/black"
            android:background="@drawable/public_bg"
            />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/left_right_margin"
        android:background="@color/white"
        android:layout_marginTop="@dimen/left_right_margin"

        >


        <TextView
            android:text="充值金额"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tv"
            android:textSize="@dimen/content_text_size_16"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/pay_money"
            android:hint="@string/input_money"
            android:inputType="numberDecimal"
            android:textSize="@dimen/content_text_size_16"
            android:gravity="center_vertical|right"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/tv"
            android:layout_toEndOf="@+id/tv"

            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="充值方式"
        android:padding="@dimen/left_right_margin"
        android:textSize="@dimen/content_text_size_16"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:id="@+id/pay_type"
        android:divider="@drawable/line_divider_bg"
        android:background="@color/white"
        >


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar"
            android:button="@null"
            android:id="@+id/pay_ali_chz"
            android:drawableRight="@drawable/checkbox_bg"
            android:paddingRight="@dimen/left_right_margin"
            android:paddingLeft="@dimen/left_right_margin"
            android:textSize="@dimen/content_text_size_16"
            android:text="@string/ali_pay"
            android:drawableLeft="@mipmap/zfb_icon"
            android:drawablePadding="@dimen/left_right_margin"
            android:background="@drawable/button_input_status_selector"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar"
            android:button="@null"
            android:id="@+id/rb_pay_wecha_chz"
            android:drawableRight="@drawable/checkbox_bg"
            android:paddingRight="@dimen/left_right_margin"
            android:paddingLeft="@dimen/left_right_margin"
            android:textSize="@dimen/content_text_size_16"
            android:text="@string/wechat_pay"
            android:drawableLeft="@mipmap/wechat_icon"
            android:drawablePadding="@dimen/left_right_margin"
            android:background="@drawable/button_input_status_selector"

            />
    </RadioGroup>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/button_red_bg"
        android:textColor="@color/white"
        android:textSize="@dimen/bottom_button_text_size_18"
        android:text="@string/pay_money"
        android:id="@+id/submit"
        android:layout_margin="@dimen/left_right_margin"/>
</LinearLayout>
